Add keyboard type toggle with preference persistence
Closes #10
Closes #13

--- a/app/src/main/res/layout/bottom_sheet_credential.xml
+++ b/app/src/main/res/layout/bottom_sheet_credential.xml
@@ -76,6 +76,8 @@
             android:layout_marginBottom="16dp"
             android:visibility="gone"
             android:hint="@string/pin_hint"
+            app:startIconDrawable="@drawable/keyboard_24"
+            app:startIconContentDescription="@string/toggle_keyboard_type"
             app:endIconMode="password_toggle"
             style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
 
@@ -83,7 +85,6 @@
                 android:id="@+id/pinEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
                 android:imeOptions="actionDone" />
 
         </com.google.android.material.textfield.TextInputLayout>
